fix option area spacing

--- a/app/css/desktop.css
+++ b/app/css/desktop.css
@@ -123,7 +123,7 @@ body                                        {overflow:hidden;}
 
 .chapter-list li                            {font-size:11px;line-height:1;float:left;width:24px;height:16px;border:solid 1px #aaa;text-align:center;padding:5px 0 2px;}
 
-.config-options                             {overflow:hidden;margin:0 0 10px;}
+.config-options                             {clear: both;margin:0 0 10px;}
 .config-options h3							{margin:0 0 .5em;width:100%;border-bottom:thin solid gray;}
 .config-options .config-option              {float:left;width:85px;min-height:20px;line-height:1;margin:0 5px 0 0;}
 .config-options .config-option input{position:absolute;opacity:0;cursor:pointer;}
